--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -30,12 +30,12 @@
   when: not existingpass.stdout
 
 - set_fact:
-    mysql_otsmanager_pass: "{{ randompass.stdout if randompass is not skipped else existingpass.stdout }}"
+    mysql_pxm_pass: "{{ randompass.stdout if randompass is not skipped else existingpass.stdout }}"
 
 - name: Set MySQL otsmanager password (localhost)
   mysql_user:
     name: pxm
-    password: "{{ mysql_otsmanager_pass }}"
+    password: "{{ mysql_pxm_pass }}"
     host: localhost
     priv: "*.*:ALL,GRANT"
     check_implicit_admin: yes
@@ -51,7 +51,7 @@
 - name: Set MySQL otsmanager password (%)
   mysql_user:
     name: pxm
-    password: "{{ mysql_otsmanager_pass }}"
+    password: "{{ mysql_pxm_pass }}"
     host: "%"
     priv: "*.*:ALL,GRANT"
     check_implicit_admin: yes
