--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -4,7 +4,7 @@
     state: latest
     pkg:
       - mariadb-server
-      - python3-mysqldb
+      - python-mysqldb
       - automysqlbackup
 
 - name: Change MySQL charset to prevent MySQL error 1709
@@ -14,31 +14,60 @@
   when: ansible_distribution_major_version|int > 15
   notify: restart mysql
 
+- name: Create /etc/systemd/system/mariadb.service.d/
+  file:
+    path: /etc/systemd/system/mariadb.service.d/
+    state: directory
+
+- name: Create /etc/systemd/system/mariadb.service.d/user-wait.conf
+  copy:
+    dest: /etc/systemd/system/mariadb.service.d/user-wait.conf
+    content: |
+      [Unit]
+      Before=user@1000.service
+  notify: reload systemd
+
 - name: Start Mysql Service
   service:
     name: mysql
     state: restarted
     enabled: true
 
+- name: Parse existing .my.cnf
+  shell: grep -s pass /home/pxm/.my.cnf | sed 's/password=//'
+  register: existingpass
+
+- name: Generate random MySQL otsmanager password
+  command: openssl rand -base64 18
+  register: randompass
+  when: not existingpass.stdout
+
+- set_fact:
+    mysql_otsmanager_pass: "{{ randompass.stdout if randompass is not skipped else existingpass.stdout }}"
+
 - name: Set MySQL otsmanager password (localhost)
   mysql_user:
     name: pxm
-    password: kaka123
+    password: "{{ mysql_otsmanager_pass }}"
     host: localhost
     priv: "*.*:ALL,GRANT"
     check_implicit_admin: yes
-  login_user: root
-  login_password: 
 
+- name: Save MySQL otsmanager password
+  template:
+    src: .my.cnf
+    dest: /home/pxm/.my.cnf
+    owner: pxm
+    group: pxm
+    mode: 0600
+  
 - name: Set MySQL otsmanager password (%)
   mysql_user:
     name: pxm
-    password: kaka123
+    password: "{{ mysql_otsmanager_pass }}"
     host: "%"
     priv: "*.*:ALL,GRANT"
     check_implicit_admin: yes
-  login_user: root
-  login_password: 
 
 - name: Check hostname
   command: hostname -f
